# OpenBroodCraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TextureObject.cpp  TextureObject.h  VertexArrayObject.h  glad.c  main.cpp  main.h  shader_vf.h  spacesystem.h
include/: globalvar.h  main.h
include/game/: gameengine.hpp  order.h  player.h  texentity.h  unit.h
include/game/engine/: meshfactory.h  meshobject.h
include/input/: command.h  input.h  inputAgent.h
maps/: test_map.json
objectmodels/: marineTile.vmo  testCube.vmo  testCube_old.vmo  testTile.vmo
shaders/: map_shader.frsh  map_shader.vesh  testGeoShader.frsh  testGeoShader.gesh  testGeoShader.vesh  testTriShader.vesh
src/: MeshObject.h  TextureObject.h  Unit.cpp  Unit.h  camera.h  globalVar.cpp  globalVar.h  globalvar.cpp  globalvar.h  headerInclude.h  headerinclude.h  main.cpp  main.h  shader_vf.h
src/game/: TexEntity.cpp  TexEntity.h  Unit.cpp  Unit.h  command.cpp  command.h  gameengine.cpp  gameengine.h  gameengine.hpp  kernelStore.h  map_tiles.h  order.cpp  player.cpp  player.h  texentity.cpp  texentity.h  unit.cpp  unit.h
src/game/engine/: camera.h  meshfactory.cpp  meshfactory.h  meshobject.h  shader_vf.h  sprite.hpp  textureobject.h
src/game/map/: GameMap.cpp  GameMap.h  gamemap.cpp  gamemap.h  map_tile.h  map_tiles.h
src/input/: command.cpp  command.h  input.cpp  input.h  inputAgent.cpp  inputAgent.h  mouse.cpp  mouse.h
src/libs/: stb_image.h
